<resources>
    <string name="app_name">Siscomex Helper</string>
    <string name="j34_siscomex_abrangencia_ncm_Codigo_text">Código</string>
    <string name="j34_siscomex_abrangencia_ncm_Descricao_text">Descricão</string>
    <string name="j34_siscomex_acordo_aladi_Codigo_text">Código</string>
    <string name="j34_siscomex_acordo_aladi_Descricao_text">Descricão</string>
    <string name="j34_siscomex_acrescimo_adi_Numerodocumentocarga_text">Número dodocumento carga</string>
    <string name="j34_siscomex_acrescimo_adi_Numeroadicao_text">Número do Adição</string>
    <string name="j34_siscomex_acrescimo_adi_Codigometodoacrescimovalor_text">Código método acréscimo valor</string>
    <string name="j34_siscomex_acrescimo_adi_Codigomoedanegociadaacrescimo_text">Código moeda  negociadaacrescimo</string>
    <string name="j34_siscomex_acrescimo_adi_Valoracrescimomoedanacional_text">Valor acréscimo moeda nacional</string>
    <string name="j34_siscomex_acrescimo_adi_Valoracrescimomoedanegociada_text">Valor acréscimo moeda negociada</string>
    <string name="j34_siscomex_acrescimos_Codigo_text">Código</string>
    <string name="j34_siscomex_acrescimos_Descricao_text">Descricão</string>
    <string name="j34_siscomex_adicao_Numerodocumentocarga_text">Número dodocumento carga</string>
    <string name="j34_siscomex_adicao_Numeroadicao_text">Número do Adição</string>
    <string name="j34_siscomex_adicao_Codigoacordoaladi_text">Código acordo ALADI </string>
    <string name="j34_siscomex_adicao_Codigoaplicacaomercadoria_text">Código aplicacaomercadoria</string>
    <string name="j34_siscomex_adicao_Codigoausenciafabricante_text">Código ausenciafabricante</string>
    <string name="j34_siscomex_adicao_Codigocoberturacambial_text">Código coberturacambial</string>
    <string name="j34_siscomex_adicao_Codigofundamentolegalreduzido_text">Código do fundamento legal reduzido</string>
    <string name="j34_siscomex_adicao_Codigofundamentolegalregime_text">Código do fundamento legal regime</string>
    <string name="j34_siscomex_adicao_Codigofundamentolegalregimepiscofins_text">Código do fundamento legal regimepiscofins</string>
    <string name="j34_siscomex_adicao_Codigoincotermsvenda_text">Código incotermsvenda</string>
    <string name="j34_siscomex_adicao_Codigomercadorianbmsh_text">Código mercadorianbmsh</string>
    <string name="j34_siscomex_adicao_Codigomercadoriancm_text">Código mercadoriancm</string>
    <string name="j34_siscomex_adicao_Codigomercadorianaladincc_text">Código mercadorianaladincc</string>
    <string name="j34_siscomex_adicao_Codigoordemmercadorianaladincc_text">Código ordemmercadorianaladincc</string>
    <string name="j34_siscomex_adicao_Codigomercadorianaladish_text">Código mercadorianaladish</string>
    <string name="j34_siscomex_adicao_Codigoordemmercadorianaladish_text">Código ordemmercadorianaladish</string>
    <string name="j34_siscomex_adicao_Codigometodovaloracao_text">Código método valoracao</string>
    <string name="j34_siscomex_adicao_Codigomotivoadmissaotemporaria_text">Código motivo admissaotemporaria</string>
    <string name="j34_siscomex_adicao_Codigourfentradamercadoria_text">Código urfentradamercadoria</string>
    <string name="j34_siscomex_adicao_Codigoviatransporte_text">Código viatransporte</string>
    <string name="j34_siscomex_adicao_Codigomoedafretemercadoria_text">Código moeda  fretemercadoria</string>
    <string name="j34_siscomex_adicao_Codigomoedaseguromercadoria_text">Código moeda  seguromercadoria</string>
    <string name="j34_siscomex_adicao_Codigomoedanegociada_text">Código moeda  negociada</string>
    <string name="j34_siscomex_adicao_Codigomotivosemcobertura_text">Código motivo semcobertura</string>
    <string name="j34_siscomex_adicao_Codigoorgaofinanciamentointernacional_text">Código orgaofinanciamentointernacional</string>
    <string name="j34_siscomex_adicao_Codigopaisorigemmercadoria_text">Código paisorigemmercadoria</string>
    <string name="j34_siscomex_adicao_Codigopaisaquisicaomercadoria_text">Código paisaquisicaomercadoria</string>
    <string name="j34_siscomex_adicao_Codigopaisprocedenciamercadoria_text">Código paisprocedenciamercadoria</string>
    <string name="j34_siscomex_adicao_Codigoregimetriburariopiscofins_text">Código regimetriburariopiscofins</string>
    <string name="j34_siscomex_adicao_Codigoregimetributacao_text">Código regimetributacao</string>
    <string name="j34_siscomex_adicao_Codigotipoacordotarifario_text">Código tipoacordotarifario</string>
    <string name="j34_siscomex_adicao_Codigovinculoimportadorexportador_text">Código vinculoimportadorexportador</string>
    <string name="j34_siscomex_adicao_Codigofabricante_text">Código fabricante</string>
    <string name="j34_siscomex_adicao_Codigofornecedorestrangeiro_text">Código fornecedorestrangeiro</string>
    <string name="j34_siscomex_adicao_Indicadorbemencomenda_text">Indicadorbemencomenda</string>
    <string name="j34_siscomex_adicao_Indicadormaterialusado_text">Indicadormaterialusado</string>
    <string name="j34_siscomex_adicao_Indicadormultimodal_text">Indicadormultimodal</string>
    <string name="j34_siscomex_adicao_Indicadortipocertificado_text">Indicadortipocertificado</string>
    <string name="j34_siscomex_adicao_Nomelocalcondicaovenda_text">Nome localcondicaovenda</string>
    <string name="j34_siscomex_adicao_Numerodocumentoreducao_text">Número dodocumento reducao</string>
    <string name="j34_siscomex_adicao_Numeroidentificacaoli_text">Número do identificacaoli</string>
    <string name="j34_siscomex_adicao_Numerorof_text">Número do rof</string>
    <string name="j34_siscomex_adicao_Percentualcoeficientereducaoii_text">Percentualcoeficientereducaoii</string>
    <string name="j34_siscomex_adicao_Pesoliquidomercadoria_text">Pesoliquidomercadoria</string>
    <string name="j34_siscomex_adicao_Quantidadeunidadeestatistica_text">Quantidadeunidadeestatistica</string>
    <string name="j34_siscomex_adicao_Textocomplementovaloraduaneiro_text">Textocomplementovaloraduaneiro</string>
    <string name="j34_siscomex_adicao_Valoraliquotaicms_text">Valor aliquotaicms</string>
    <string name="j34_siscomex_adicao_Valorcalculodcrdolar_text">Valor calculodcrdolar</string>
    <string name="j34_siscomex_adicao_Valorfinanciadosuperior360_text">Valor financiadosuperior360</string>
    <string name="j34_siscomex_adicao_Valorfretemercadoriamoedanacional_text">Valor fretemercadoriamoedanacional</string>
    <string name="j34_siscomex_adicao_Valorfretemercadoriamoedanegociada_text">Valor fretemercadoriamoedanegociada</string>
    <string name="j34_siscomex_adicao_Valoriicalculadodcrmoedanacional_text">Valor iicalculadodcrmoedanacional</string>
    <string name="j34_siscomex_adicao_Valoriidevidozfm_text">Valor iidevidozfm</string>
    <string name="j34_siscomex_adicao_Valoriiareceberzfm_text">Valor iiareceberzfm</string>
    <string name="j34_siscomex_adicao_Valormercadoriacondicaovenda_text">Valor mercadoriacondicaovenda</string>
    <string name="j34_siscomex_adicao_Valormercadoriaembarquemoedanacional_text">Valor mercadoriaembarquemoedanacional</string>
    <string name="j34_siscomex_adicao_Valormercadoriavendamoedanacional_text">Valor mercadoriavendamoedanacional</string>
    <string name="j34_siscomex_adicao_Valorseguromercadoriamoedanacional_text">Valor seguromercadoriamoedanacional</string>
    <string name="j34_siscomex_adicao_Valorseguromercadoriamoedanegociada_text">Valor seguromercadoriamoedanegociada</string>
    <string name="j34_siscomex_aladi_Codigo_text">Código</string>
    <string name="j34_siscomex_aladi_Descricao_text">Descricão</string>
    <string name="j34_siscomex_armazem_di_Numerodocumentocarga_text">Número dodocumento carga</string>
    <string name="j34_siscomex_armazem_di_Ordem_text">Ordem</string>
    <string name="j34_siscomex_armazem_di_Nomearmazemcarga_text">Nome armazemcarga</string>
    <string name="j34_siscomex_atrib_ncm_Ncm_text">Ncm</string>
    <string name="j34_siscomex_atrib_ncm_Atributoncm_text">Atributoncm</string>
    <string name="j34_siscomex_atrib_ncm_Multiplo_text">Multiplo</string>
    <string name="j34_siscomex_atrib_ncm_Nivel_text">Nivel</string>
    <string name="j34_siscomex_atrib_ncm_Atributo_text">Atributo</string>
    <string name="j34_siscomex_bancos_Codigo_text">Código</string>
    <string name="j34_siscomex_bancos_Descricao_text">Descricão</string>
    <string name="j34_siscomex_cidades_Estado_text">Estado</string>
    <string name="j34_siscomex_cidades_Codmun_text">Codmun</string>
    <string name="j34_siscomex_cidades_Nome_text">Nome </string>
    <string name="j34_siscomex_cidades_Estado_id_text">Estado_id</string>
    <string name="j34_siscomex_compensacao_di_Numerodocumentocarga_text">Número dodocumento carga</string>
    <string name="j34_siscomex_compensacao_di_Ordem_text">Ordem</string>
    <string name="j34_siscomex_compensacao_di_Codigoreceitacredito_text">Código receitacredito</string>
    <string name="j34_siscomex_compensacao_di_Numerodocumentogeradorcredito_text">Número dodocumento geradorcredito</string>
    <string name="j34_siscomex_compensacao_di_Valorcompensarcredito_text">Valor compensarcredito</string>
    <string name="j34_siscomex_de_merc_adi_Numerodocumentocarga_text">Número dodocumento carga</string>
    <string name="j34_siscomex_de_merc_adi_Numeroadicao_text">Número do Adição</string>
    <string name="j34_siscomex_de_merc_adi_Codigopaiscertificado_text">Código paiscertificado</string>
    <string name="j34_siscomex_de_merc_adi_Numerodeadmercosul_text">Número do deadmercosul</string>
    <string name="j34_siscomex_de_merc_adi_Numerodicertificado_text">Número do dicertificado</string>
    <string name="j34_siscomex_de_merc_adi_Numeroitemcertificado_text">Número do itemcertificado</string>
    <string name="j34_siscomex_de_merc_adi_Numeroreadfinal_text">Número do readfinal</string>
    <string name="j34_siscomex_de_merc_adi_Numeroreadinicial_text">Número do readinicial</string>
    <string name="j34_siscomex_empresas_Codigo_text">Código</string>
    <string name="j34_siscomex_empresas_Tipopesssoa_text">Tipopesssoa</string>
    <string name="j34_siscomex_empresas_Razaosocial_text">Razaosocial</string>
    <string name="j34_siscomex_empresas_Telefone_text">Telefone</string>
    <string name="j34_siscomex_empresas_Endereco_text">Endereco</string>
    <string name="j34_siscomex_empresas_Numero_text">Número do </string>
    <string name="j34_siscomex_empresas_Complemento_text">Complemento</string>
    <string name="j34_siscomex_empresas_Bairro_text">Bairro</string>
    <string name="j34_siscomex_empresas_Municipio_text">Municipio</string>
    <string name="j34_siscomex_empresas_Estado_text">Estado</string>
    <string name="j34_siscomex_empresas_Cep_text">Cep</string>
    <string name="j34_siscomex_empresas_Pais_text">Pais</string>
    <string name="j34_siscomex_empresas_Email_text">Email</string>
    <string name="j34_siscomex_empresas_Municipioex_text">Municipioex</string>
    <string name="j34_siscomex_empresas_Estadoex_text">Estadoex</string>
    <string name="j34_siscomex_empresas_Cnpj_text">Cnpj</string>
    <string name="j34_siscomex_tipo_documento_Codigo_text">Código</string>
    <string name="j34_siscomex_tipo_documento_Sigla_text">Sigla</string>
    <string name="j34_siscomex_tipo_documento_Descricao_text">Descricão</string>
    <string name="j34_siscomex_tipo_documento_Maritima_text">Maritima</string>
    <string name="j34_siscomex_tipo_documento_Fluvia_text">Fluvia</string>
    <string name="j34_siscomex_tipo_documento_Aerea_text">Aerea</string>
    <string name="j34_siscomex_tipo_documento_Rodoviaria_text">Rodoviaria</string>
    <string name="j34_siscomex_tipo_documento_Ferroviaria_text">Ferroviaria</string>
    <string name="j34_siscomex_tipo_documento_Postal_text">Postal</string>
    <string name="j34_siscomex_tipo_documento_Lacustre_text">Lacustre</string>
</resources>