<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.bandoni.frm.FRMempresas"
    tools:showIn="@layout/activity_detail_empresas">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Codigo_text"
        android:id="@+id/lblCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/lblCodigo"
        android:id="@+id/edtCodigo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Tipopesssoa_text"
        android:id="@+id/lblTipopesssoa"
        android:layout_below="@+id/edtCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/lblTipopesssoa"
        android:id="@+id/edtTipopesssoa" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Razaosocial_text"
        android:id="@+id/lblRazaosocial"
        android:layout_below="@+id/edtTipopesssoa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/lblRazaosocial"
        android:id="@+id/edtRazaosocial" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Telefone_text"
        android:id="@+id/lblTelefone"
        android:layout_below="@+id/edtRazaosocial"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="71dp"
        android:layout_below="@+id/lblTelefone"
        android:id="@+id/edtTelefone" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Endereco_text"
        android:id="@+id/lblEndereco"
        android:layout_below="@+id/edtTelefone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="93dp"
        android:layout_below="@+id/lblEndereco"
        android:id="@+id/edtEndereco" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Numero_text"
        android:id="@+id/lblNumero"
        android:layout_below="@+id/edtEndereco"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="115dp"
        android:layout_below="@+id/lblNumero"
        android:id="@+id/edtNumero" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Complemento_text"
        android:id="@+id/lblComplemento"
        android:layout_below="@+id/edtNumero"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="137dp"
        android:layout_below="@+id/lblComplemento"
        android:id="@+id/edtComplemento" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Bairro_text"
        android:id="@+id/lblBairro"
        android:layout_below="@+id/edtComplemento"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="159dp"
        android:layout_below="@+id/lblBairro"
        android:id="@+id/edtBairro" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Municipio_text"
        android:id="@+id/lblMunicipio"
        android:layout_below="@+id/edtBairro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="181dp"
        android:layout_below="@+id/lblMunicipio"
        android:id="@+id/edtMunicipio" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Estado_text"
        android:id="@+id/lblEstado"
        android:layout_below="@+id/edtMunicipio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="203dp"
        android:layout_below="@+id/lblEstado"
        android:id="@+id/edtEstado" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Cep_text"
        android:id="@+id/lblCep"
        android:layout_below="@+id/edtEstado"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="225dp"
        android:layout_below="@+id/lblCep"
        android:id="@+id/edtCep" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Pais_text"
        android:id="@+id/lblPais"
        android:layout_below="@+id/edtCep"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="247dp"
        android:layout_below="@+id/lblPais"
        android:id="@+id/edtPais" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Email_text"
        android:id="@+id/lblEmail"
        android:layout_below="@+id/edtPais"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="269dp"
        android:layout_below="@+id/lblEmail"
        android:id="@+id/edtEmail" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Municipioex_text"
        android:id="@+id/lblMunicipioex"
        android:layout_below="@+id/edtEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="291dp"
        android:layout_below="@+id/lblMunicipioex"
        android:id="@+id/edtMunicipioex" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Estadoex_text"
        android:id="@+id/lblEstadoex"
        android:layout_below="@+id/edtMunicipioex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="313dp"
        android:layout_below="@+id/lblEstadoex"
        android:id="@+id/edtEstadoex" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_empresas_Cnpj_text"
        android:id="@+id/lblCnpj"
        android:layout_below="@+id/edtEstadoex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="335dp"
        android:layout_below="@+id/lblCnpj"
        android:id="@+id/edtCnpj" />
</RelativeLayout>
