<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent" >
    <RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.bandoni.frm.FRMtipo_documento"
    tools:showIn="@layout/activity_detail_tipo_documento">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Codigo_text"
        android:id="@+id/lblCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:layout_below="@+id/lblCodigo"
        android:id="@+id/edtCodigo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Sigla_text"
        android:id="@+id/lblSigla"
        android:layout_below="@+id/edtCodigo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:inputType="text"
        android:layout_below="@+id/lblSigla"
        android:id="@+id/edtSigla" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Descricao_text"
        android:id="@+id/lblDescricao"
        android:layout_below="@+id/edtSigla"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="49dp"
        android:inputType="text"
        android:layout_below="@+id/lblDescricao"
        android:id="@+id/edtDescricao" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Maritima_text"
        android:id="@+id/lblMaritima"
        android:layout_below="@+id/edtDescricao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="71dp"
        android:inputType="text"
        android:layout_below="@+id/lblMaritima"
        android:id="@+id/edtMaritima" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Fluvia_text"
        android:id="@+id/lblFluvia"
        android:layout_below="@+id/edtMaritima"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="93dp"
        android:inputType="text"
        android:layout_below="@+id/lblFluvia"
        android:id="@+id/edtFluvia" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Aerea_text"
        android:id="@+id/lblAerea"
        android:layout_below="@+id/edtFluvia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="115dp"
        android:inputType="text"
        android:layout_below="@+id/lblAerea"
        android:id="@+id/edtAerea" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Rodoviaria_text"
        android:id="@+id/lblRodoviaria"
        android:layout_below="@+id/edtAerea"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="137dp"
        android:inputType="text"
        android:layout_below="@+id/lblRodoviaria"
        android:id="@+id/edtRodoviaria" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Ferroviaria_text"
        android:id="@+id/lblFerroviaria"
        android:layout_below="@+id/edtRodoviaria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="159dp"
        android:inputType="text"
        android:layout_below="@+id/lblFerroviaria"
        android:id="@+id/edtFerroviaria" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Postal_text"
        android:id="@+id/lblPostal"
        android:layout_below="@+id/edtFerroviaria"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="181dp"
        android:inputType="text"
        android:layout_below="@+id/lblPostal"
        android:id="@+id/edtPostal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j34_siscomex_tipo_documento_Lacustre_text"
        android:id="@+id/lblLacustre"
        android:layout_below="@+id/edtPostal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="203dp"
        android:inputType="text"
        android:layout_below="@+id/lblLacustre"
        android:id="@+id/edtLacustre" />
  </RelativeLayout>
</ScrollView>
